add unit tests GitHub actions